// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TemplateSyncResult should render empty state when no templates synced 1`] = `
<EmptySyncResult
  primaryAction={[Function]}
/>
`;

exports[`TemplateSyncResult should render export result 1`] = `
<FinishedSyncResult
  branch="master"
  editPaths={Object {}}
  fileRepoStartWith={Array []}
  gitUser="Admin"
  pageChange={[Function]}
  pagination={Object {}}
  repo="https://github.com/theforeman/community-templates.git"
  templates={
    Array [
      Object {
        "additionalErrors": null,
        "className": "JobTemplate",
        "errors": Object {},
        "humanizedClassName": "Job Template",
        "locked": true,
        "name": "random template",
        "snippet": true,
        "templateFile": "random_template.erb",
      },
      Object {
        "additionalErrors": null,
        "className": "Ptable",
        "errors": Object {},
        "humanizedClassName": "Ptable",
        "locked": false,
        "name": "CoreOS default",
        "snippet": false,
        "templateFile": "coreos_default.erb",
      },
    ]
  }
  type="export"
/>
`;

exports[`TemplateSyncResult should render import result 1`] = `
<FinishedSyncResult
  branch=""
  editPaths={Object {}}
  fileRepoStartWith={Array []}
  gitUser=""
  pageChange={[Function]}
  pagination={Object {}}
  repo="/home/vagrant/templates"
  templates={
    Array [
      Object {
        "additionalErrors": "No \\"name\\" found in metadata",
        "errors": null,
        "name": null,
        "templateFile": "random_template.erb",
      },
      Object {
        "additionalErrors": null,
        "className": "ProvisioningTemplate",
        "errors": Object {
          "base": Array [
            "This template is locked",
          ],
        },
        "humanizedClassName": "Provisioning Template",
        "kind": "Provision",
        "locked": true,
        "name": "EPEL",
        "snippet": true,
        "templateFile": "epel.erb",
      },
      Object {
        "additionalErrors": null,
        "className": "Ptable",
        "errors": Object {},
        "humanizedClassName": "Ptable",
        "locked": false,
        "name": "CoreOS default",
        "snippet": false,
        "templateFile": "coreos_default.erb",
      },
      Object {
        "additionalErrors": "No \\"model\\" found in metadata",
        "errors": null,
        "name": null,
        "templateFile": "no_model.erb",
      },
      Object {
        "additionalErrors": null,
        "className": "ProvisioningTemplate",
        "errors": Object {
          "name": Array [
            "has already been taken",
          ],
        },
        "humanizedClassName": "Provisioning Template",
        "locked": true,
        "name": "Kickstart fake",
        "snippet": true,
        "templateFile": "kickstart_fake.erb",
      },
    ]
  }
  type="import"
/>
`;
